# fast_tokenizer

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  FastTokenizer.cmake
cmake/: third_party.cmake
examples/clip/cpp/: demo.cc
examples/ernie-3.0/cpp/: demo.cc
fast_tokenizer/: CMakeLists.txt
fast_tokenizer/core/: CMakeLists.txt  added_vocabulary.cc  added_vocabulary.h  base.h  encoding.cc  encoding.h  tokenizer.cc  tokenizer.h
fast_tokenizer/decoders/: CMakeLists.txt  decoder.h  wordpiece.cc  wordpiece.h
fast_tokenizer/models/: CMakeLists.txt  bpe.cc  bpe.h  fast_wordpiece.cc  fast_wordpiece.h  model.h  unigram.cc  unigram.h  wordpiece.cc  wordpiece.h
fast_tokenizer/normalizers/: CMakeLists.txt  bert.cc  bert.h  normalizer.cc  normalizer.h  precompiled.cc  precompiled.h  replace.cc  replace.h  strip.cc  strip.h  unicode.cc  unicode.h  utils.cc  utils.h
fast_tokenizer/postprocessors/: CMakeLists.txt  bert.cc  byte_level.cc  byte_level.h  postprocessor.cc  postprocessor.h  roberta.cc  roberta.h  template.cc  template.h
fast_tokenizer/pretokenizers/: CMakeLists.txt  bert.cc  byte_level.cc  byte_level.h  metaspace.cc  metaspace.h  pretokenizer.cc  pretokenizer.h  sequence.cc  sequence.h  split.cc  split.h  whitespace.cc  whitespace_and_punctuation.cc
fast_tokenizer/pybind/: core.cc  decoders.cc  models.cc  normalizers.cc  postprocessors.cc  pretokenizers.cc  pybind.cc  tokenizers.cc  utils.cc
fast_tokenizer/test/: gtest_main.cc  test_bert_pretokenizer.cc  test_bert_tokenizer.cc  test_clip_fast_tokenizer.cc  test_ernie_fast_tokenizer.cc  test_fast_wordpiece.cc  test_normalizer.cc  test_replace.cc  test_roberta_postprocessor.cc  test_split_pretokenizer.cc  test_strip.cc  test_unicode.cc  test_utils.cc  test_whitespace.cc  test_wordpiece.cc  utils.h
fast_tokenizer/tokenizers/: clip_fast_tokenizer.cc  clip_fast_tokenizer.h  ernie_fast_tokenizer.cc  ernie_fast_tokenizer.h
fast_tokenizer/utils/: CMakeLists.txt  cache.h  failure.cc  failure.h  lattice.cc  lattice.h  sentencepiece_normalizer.cc  sentencepiece_normalizer.h  shared_mutex.h  trie.cc  trie.h  unique_ptr.h  utf8.h  utils.cc  utils.h  variant.h
