# cc_library(utils SRCS utils.cc DEPS icuuc icudata)
# cc_library(trie SRCS trie.cc DEPS dart utils)
# cc_library(failure SRCS failure.cc DEPS trie utils)
# cc_library(sentencepiece_normalizer SRCS sentencepiece_normalizer.cc DEPS trie icuuc icudata utils)
# cc_library(lattice SRCS lattice.cc DEPS utils)

find_package(glog REQUIRED)
find_package(pkgconfig REQUIRED)
pkg_check_modules(ICU REQUIRED icu-uc)

add_library(utils utils.cc)
target_include_directories(utils PUBLIC ${ICU_INCLUDE_DIRS})
target_link_libraries(utils ${ICU_LIBRARIES})
add_library(trie trie.cc)
target_link_libraries(trie glog::glog)
add_library(failure failure.cc)
target_link_libraries(failure glog::glog)
add_library(sentencepiece_normalizer sentencepiece_normalizer.cc)
target_include_directories(sentencepiece_normalizer PUBLIC ${ICU_INCLUDE_DIRS})
target_link_libraries(sentencepiece_normalizer glog::glog ${ICU_LIBRARIES})
add_library(lattice lattice.cc)
target_link_libraries(lattice glog::glog)
